Updates from ShareLaTeX

--- a/RASD/main.tex
+++ b/RASD/main.tex
@@ -56,7 +56,7 @@
         
         The system should provide an efficient data acquisition facility which gives the possibility to verified \textit{third-party} signed onto the service to request health status information about subscribed customers. The application may also allow \textit{individual} users to connect \textit{external devices} such as smart-watches or similar, to perform a more detailed data acquisition and monitoring.
         
-        In addition, the \textit{third-party} may also provide an SOS service for elderly people for which \textit{TrackMe} should be able to monitor the health status and, when such parameters are below certain thresholds, sends the location of the customer to an ambulance.
+        In addition, the \textit{third-party} may also provide a personalized and non intrusive SOS service for elderly people that may also request for it.
     
         Moreover, through the \textit{Track4Run} service, \textit{TrackMe} wants to provide to third-parties signed in the application to create a new run, a competition in which other users can either participate as \textit{athletes} or watch as \textit{spectators}. Additionally, this feature may exploits other service functionality for keeping track of athletes progresses and for helping them to prevent major accident happen during the run.
                 
@@ -75,13 +75,13 @@
         
         The application should also provide to third-parties two possible data request options:
         \begin{itemize}
-            \item individual data request:
-            \item group data request:
+            \item individual data request: sent directly to the individual if they know an  individual by his/her social security number or fiscal code in Italy;
+            \item group data request: access  to  anonymous  data  of  groups  of  individuals, if \textit{TrackMe}  that  approves  them  if  it  is  able  to  properly  anonymize  the  requested  data.
         \end{itemize}
         
-        Moreover, the system implements \textit{Data4Help} services to manage individual's personal data and provide them to third-parties who requested for. In addition, there should be an interface for third-party users registered to \textit{Data4Help} that wants to enable an \textit{Automated-SOS} service for her subscribed users.
+        Moreover, the system implements \textit{Data4Help} services to manage individual's personal data and provide them to third-parties who requested for. In addition, there should be an interface both for third-party and individual users registered to \textit{Data4Help} that wants to enable an \textit{Automated-SOS} service. This feature should be able to use users' data to monitor their health status and, when such parameters are below certain thresholds, sends the location of the customer to an ambulance.
         
-        Additionally, the software should provide to users that wants to use \textit{Track4Run} all the facilities they needed, such as a page for the creation of a new run with all the information (track, date and time) and two different pages to allow both spectators and athletes to watch or enroll to existing run.
+        Additionally, the software should provide to users that wants to use \textit{Track4Run} all the facilities they need such as a page for the creation of a new run with all the information (track, date and time) and two different pages to allow both spectators and athletes to watch or enroll to existing run.
         
         \subsubsection{Goals}
         
@@ -98,7 +98,7 @@
         
         Finally, endmost section illustrates \textit{Alloy} models including purpose, proof and explanation. In addition, describes worlds obtained by running them.
         
-        There is also a list of tables and a list of figures representing respectively use cases and diagrams in order to help the reader to understand them and navigate the specification.
+        Further, there is a list of tables and a list of figures representing respectively use cases and diagrams in order to help the reader to understand them and navigate the specification.
         
     \subsection{Definition, Acronyms and  Abbreviations}
             \subsubsection{Keywords}
