--- a/RASD/references.bib
+++ b/RASD/references.bib
@@ -16,3 +16,13 @@
   author={Bradner, Scott},
   year={1997}
 }
+@article{zave1997four,
+  title={Four dark corners of requirements engineering},
+  author={Zave, Pamela and Jackson, Michael},
+  journal={ACM transactions on Software Engineering and Methodology (TOSEM)},
+  volume={6},
+  number={1},
+  pages={1--30},
+  year={1997},
+  publisher={ACM}
+}
